--- a/GetHired/GetHired.ASPClient/Views/CompanyJobOffer/Details.cshtml
+++ b/GetHired/GetHired.ASPClient/Views/CompanyJobOffer/Details.cshtml
@@ -4,15 +4,79 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Company</h4>
+    <h4>JobOffer</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.Position)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Position)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.Payment)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Payment)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.JobOfferRating)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.JobOfferRating)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.JobType)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.JobType)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.JobCategory)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.JobCategory)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CompanyName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CompanyName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CompanyBusinessInfo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CompanyBusinessInfo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.CompanyWebsite)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.CompanyWebsite)
         </dd>
     </dl>
 </div>
